# aiostreammagic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  sonar-project.properties  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  pages.yml  python-matrix-test.yml  release.yml
aiostreammagic/: __init__.py  const.py  endpoints.py  models.py  stream_magic.py  util.py
docs/: equalizer_api.md
examples/: basic.py  eq_presets.py  subscribe.py  test.py
tests/: test_stream_magic.py
