[project]
name = "aiostreammagic"
version = "2.11.0"
description = "An async python package for interfacing with Cambridge Audio / Stream Magic compatible streamers."
authors = [
    { name = "Noah Husby", email = "32528627+noahhusby@users.noreply.github.com" }
]
maintainers = [
    { name = "Noah Husby", email = "32528627+noahhusby@users.noreply.github.com" }
]
license = "MIT"
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "yarl>=1.20.1",
    "mashumaro>=3.16",
    "orjson>=3.11.0",
    "aiohttp>=3.12.14",
    "packaging>=25.0"
]

[project.urls]
homepage = "https://github.com/noahhusby/aiostreammagic"
repository = "https://github.com/noahhusby/aiostreammagic"
documentation = "https://github.com/noahhusby/aiostreammagic"

[project.optional-dependencies]
dev = [
    "mypy==1.18.2",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov==6.2.1",
    "ruff==0.13.3"
]
docs = [
    "pdoc>=14.7,<16.0"
]

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = "3.11"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
